--- a/Quitt/Quitt/Storyboard.storyboard
+++ b/Quitt/Quitt/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Eak-Cm-bHI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Eak-Cm-bHI">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -95,10 +95,10 @@
             </objects>
             <point key="canvasLocation" x="1155" y="97"/>
         </scene>
-        <!--View Controller - Options-->
+        <!--FMJ - Options-->
         <scene sceneID="qoF-Nw-Zbm">
             <objects>
-                <viewController id="Vdz-nf-YFQ" sceneMemberID="viewController">
+                <viewController id="Vdz-nf-YFQ" customClass="FMJ" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AQ1-hR-kg1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
